fix(sonar): S1144 dead code, S1068 unused fields, S6213 restricted identifiers, BundleResources self-ref - S1144: supprimé méthode logImportEvent 15-param orpheline (CascadeImportPipeline) ;   retrait des méthodes quoteIdent, extractEntryArgs, logExtractionEvent,   preCountAndPublishRecordsTotal déjà effectués dans la période précédente - S1068: champs inutilisés retirés dans 7 fichiers   * PublishLifecycleCoordinator : workflowLogRepository (+ constructeur migré en no-arg)   * OreSiResources : getReferencedBinaryFilesUseCase   * PublishLifecycleService : coordinator   * ExtractionLifecycle (outer): repository   * ExtractionLifecycle (inner Handle): bytesTotal   * GroovyAndMailEnumsTest : ctx   * ConfigEditServiceTest : tpe   Mise à jour des tests impactés : PublishLifecycleCoordinatorTest,   PublishLifecycleServiceTest - S6213: renommage variables restreintes 'record' → 'csvRow'/'keysRecord'/'datumRecord'   * NaturalKeyPreScanService : 2 boucles for-each + méthode composeCompositeNaturalKey   * DataImporter : boucle for-each   * PipelineContextRecordsTest : 2 variables locales - BundleResources: corrigé auto-référence ERROR_TYPE_LOADING = ERROR_TYPE_LOADING   → valeur littérale 'ERROR_LOADING_DATA' restaurée (régression S1192 session précédente)